Fix overflow on mobile

--- a/themes/moroz/assets/css/main.scss
+++ b/themes/moroz/assets/css/main.scss
@@ -25,6 +25,7 @@ pre {
   border: 1px solid var(--primary);
   padding: 0.5em 0.75em;
   font-size: 0.875em;
+  white-space: pre-wrap;
 }
 
 :root {
@@ -65,6 +66,7 @@ body > main {
   @media (max-width: #{$container-width}) {
     max-width: 100%;
     width: 100%;
+    padding-inline: 1rem;
   }
 }
 
